add amazon-walmart base-1 notebooks

--- a/scripts/create-embedding-data-by-set-test.ipynb
+++ b/scripts/create-embedding-data-by-set-test.ipynb
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "! source activate entity-resolution && python create-embedding-data-per-set.py glove ../data/embeddings/glove-300.gensim ../data/raw/amazon-google ../data/converted/amazon-google-reduced -c name description -s --max_df=0.1"
+    "! source activate entity-resolution && python create-embedding-data-by-set.py glove ../data/embeddings/glove-300.gensim ../data/raw/amazon-google ../data/converted/amazon-google-reduced -c name description -s --max_df=0.1"
    ]
   },
   {
@@ -89,16 +89,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Amazon-Walmart: normal"
+    "### Amazon-walmart: reduced"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-19T01:21:40.152112Z",
-     "start_time": "2018-03-19T01:21:17.664709Z"
+     "end_time": "2018-04-12T21:36:24.444522Z",
+     "start_time": "2018-04-12T21:35:46.825633Z"
     }
    },
    "outputs": [
@@ -120,6 +120,57 @@
       "Columns to drop:\n",
       "\tprod_id1\n",
       "\tprod_id2\n",
+      "\timageurl\n",
+      "\tmodelno\n",
+      "Cleaning text. Fixed 3719 unique tokens\n",
+      "Creating map file. 69244 unique tokens detected.\n",
+      "Building embedding matrix. 33265 unknown tokens assigned random Gaussian.\n",
+      "Converting text data to index vectors.\n"
+     ]
+    }
+   ],
+   "source": [
+    "! source activate entity-resolution && python create-embedding-data-by-set.py glove ../data/embeddings/glove-300.gensim ../data/raw/amazon-walmart ../data/converted/amazon-walmart-reduced -c brand groupname title shelfdescr shortdescr longdescr -d prod_id1 prod_id2 imageurl modelno -s --max_df=1.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Amazon-Walmart: normal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-12T21:11:25.480137Z",
+     "start_time": "2018-04-12T21:11:00.755443Z"
+    },
+    "cell_style": "center"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Gensim model...\n",
+      "Check id column names are valid: passed\n",
+      "Check datasets have same column names: passed\n",
+      "Check listed columns are valid: passed\n",
+      "Columns to convert:\n",
+      "\tbrand\n",
+      "\tgroupname\n",
+      "\ttitle\n",
+      "\tshelfdescr\n",
+      "\tshortdescr\n",
+      "\tlongdescr\n",
+      "Columns to drop:\n",
+      "\tprod_id1\n",
+      "\tprod_id2\n",
+      "\timageurl\n",
+      "\tmodelno\n",
       "Cleaning text. Fixed 3719 unique tokens\n",
       "Creating map file. 124127 unique tokens detected.\n",
       "Building embedding matrix. 53741 unknown tokens assigned random Gaussian.\n",
@@ -128,7 +179,7 @@
     }
    ],
    "source": [
-    "! source activate entity-resolution && python create-embedding-data-per-set.py glove ../data/embeddings/glove-300.gensim ../data/raw/amazon-walmart ../data/converted/amazon-walmart -c brand groupname title shelfdescr shortdescr longdescr -d prod_id1 prod_id2"
+    "! source activate entity-resolution && python create-embedding-data-by-set.py glove ../data/embeddings/glove-300.gensim ../data/raw/amazon-walmart ../data/converted/amazon-walmart -c brand groupname title shelfdescr shortdescr longdescr -d prod_id1 prod_id2 imageurl modelno"
    ]
   },
   {
@@ -140,11 +191,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-26T19:48:36.741939Z",
-     "start_time": "2018-03-26T19:48:36.731068Z"
+     "end_time": "2018-04-12T21:35:31.928724Z",
+     "start_time": "2018-04-12T21:35:31.920355Z"
     },
     "scrolled": true
    },
@@ -153,12 +204,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting create-embedding-data-per-set.py\n"
+      "Overwriting create-embedding-data-by-set.py\n"
      ]
     }
    ],
    "source": [
-    "%%writefile create-embedding-data-per-set.py\n",
+    "%%writefile create-embedding-data-by-set.py\n",
     "\n",
     "import os\n",
     "import shutil\n",
@@ -363,6 +414,7 @@
     "    for word, index in sk_dict.items():\n",
     "        word2idx[word] = index + 1\n",
     "        idx2word[index+1] = word\n",
+    "    \n",
     "print('{} unique tokens detected.'.format(len(word2idx)))\n",
     "    \n",
     "print('Building embedding matrix. ', end='')\n",
@@ -382,7 +434,10 @@
     "    \n",
     "print('Converting text data to index vectors.')\n",
     "def record2idx(x):\n",
-    "    x = x.split()\n",
+    "    if not use_sklearn:\n",
+    "        x = x.split()\n",
+    "    else:\n",
+    "        x = x.lower().split()\n",
     "    return [word2idx[word] for word in x]\n",
     "\n",
     "df1.loc[:, columns] = df1.loc[:, columns].applymap(record2idx)\n",
