--- a/scripts/deepER-model-generator-test.ipynb
+++ b/scripts/deepER-model-generator-test.ipynb
@@ -191,11 +191,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-07T18:50:32.552887Z",
-     "start_time": "2018-04-07T18:50:32.529570Z"
+     "end_time": "2018-04-12T22:43:45.050922Z",
+     "start_time": "2018-04-12T22:43:45.024111Z"
     }
    },
    "outputs": [
@@ -523,7 +523,7 @@
     "    # reset similarity layer to empty so only numeric-based similarities are used\n",
     "    similarity_layers = list()\n",
     "    if 'scaled_inverse_lp' in numeric_sim_metrics:\n",
-    "        similarity_layer = Lambda(lambda x: K.exp(-2 * K.abs(x[0]-x[1]) / (x[0] + x[1])))\n",
+    "        similarity_layer = Lambda(lambda x: K.exp(-2 * K.abs(x[0]-x[1]) / (x[0] + x[1] + 1e-5)))\n",
     "        similarity_layers.append(similarity_layer)\n",
     "    if 'unscaled_inverse_lp' in numeric_sim_metrics:\n",
     "        similarity_layer = Lambda(lambda x: K.exp(-K.abs(x[0]-x[1])))\n",
