--- a/scripts/make-splits-test.ipynb
+++ b/scripts/make-splits-test.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Amazon-google: normal"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -30,6 +37,13 @@
    ],
    "source": [
     "! source activate entity-resolution && python make-splits.py ../data/converted/amazon-google/ ../data/split/amazon-google/ -npr 100 -v"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Amazon-google: reduced"
    ]
   },
   {
@@ -62,16 +76,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Amazon-walmart: normal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-12T21:13:04.743281Z",
+     "start_time": "2018-04-12T21:12:32.411484Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1154 matched pairs detected. Creating 115400 non-matched pairs.\n",
+      "Training set contains 93243 instances\n",
+      "Validation set contains 11656 instances\n",
+      "Test set contains 11655 instances\n"
+     ]
+    }
+   ],
+   "source": [
+    "! source activate entity-resolution && python make-splits.py ../data/converted/amazon-walmart/ ../data/split/amazon-walmart/ -npr 100 -v"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Amazon-walmart: reduced"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-12T21:38:29.444136Z",
+     "start_time": "2018-04-12T21:37:59.571849Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1154 matched pairs detected. Creating 115400 non-matched pairs.\n",
+      "Training set contains 93243 instances\n",
+      "Validation set contains 11656 instances\n",
+      "Test set contains 11655 instances\n"
+     ]
+    }
+   ],
+   "source": [
+    "! source activate entity-resolution && python make-splits.py ../data/converted/amazon-walmart-reduced/ ../data/split/amazon-walmart-reduced/ -npr 100 -v"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Script "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 76,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-03T23:17:36.493744Z",
-     "start_time": "2018-03-03T23:17:36.486828Z"
+     "end_time": "2018-04-12T21:03:32.971125Z",
+     "start_time": "2018-04-12T21:03:32.963284Z"
     }
    },
    "outputs": [
@@ -129,8 +207,14 @@
     "verbose = args.verbose\n",
     "\n",
     "df1 = pd.read_csv(os.path.join(source_dir, set1), encoding = \"latin1\")\n",
+    "df1['id1'] = df1['id1'].astype(str)\n",
+    "\n",
     "df2 = pd.read_csv(os.path.join(source_dir, set2), encoding = \"latin1\")\n",
+    "df2['id2'] = df2['id2'].astype(str)\n",
+    "\n",
     "df_pos = pd.read_csv(os.path.join(source_dir, matches), encoding = \"latin1\")\n",
+    "df_pos['id1'] = df_pos['id1'].astype(str)\n",
+    "df_pos['id2'] = df_pos['id2'].astype(str)\n",
     "\n",
     "# calculate number of matches available and...\n",
     "# number of non-matches that need to be sampled\n",
@@ -141,8 +225,8 @@
     "          format(n_positives, n_negatives))\n",
     "    \n",
     "# extract id columns from respective datasets\n",
-    "id1 = df1['id1']\n",
-    "id2 = df2['id2']\n",
+    "id1 = df1['id1'].astype(str)\n",
+    "id2 = df2['id2'].astype(str)\n",
     "\n",
     "# create a mapping from id1 to a list of matches in id2.\n",
     "# when creating non-matches, we can consult dictmap to ensure non-matches...\n",
@@ -304,11 +388,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 69,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-03T23:16:27.279482Z",
-     "start_time": "2018-03-03T23:16:24.379383Z"
+     "end_time": "2018-04-12T21:01:17.185408Z",
+     "start_time": "2018-04-12T21:01:14.074568Z"
     }
    },
    "outputs": [
@@ -316,10 +400,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1300 matched pairs detected. Creating 11700 non-matched pairs.\n",
-      "Training set contains 10400 instances\n",
-      "Validation set contains 1300 instances\n",
-      "Test set contains 1300 instances\n"
+      "1154 matched pairs detected. Creating 10386 non-matched pairs.\n",
+      "Training set contains 9232 instances\n",
+      "Validation set contains 1154 instances\n",
+      "Test set contains 1154 instances\n"
      ]
     }
    ],
@@ -332,12 +416,12 @@
     "from collections import defaultdict\n",
     "\n",
     "# parse arguments\n",
-    "source_dir = '../data/converted/amazon-google/'\n",
+    "source_dir = '../data/converted/amazon-walmart-reduced/'\n",
     "set1 = 'set1.csv'\n",
     "set2 = 'set2.csv'\n",
     "matches = 'matches.csv'\n",
     "\n",
-    "destination_path = '../data/split/amazon-google/'\n",
+    "destination_path = '../data/split/amazon-walmart-reduced/'\n",
     "\n",
     "neg_pos_ratio = 9\n",
     "val_prop = 0.1\n",
@@ -346,8 +430,14 @@
     "verbose = True\n",
     "\n",
     "df1 = pd.read_csv(os.path.join(source_dir, set1), encoding = \"latin1\")\n",
+    "df1['id1'] = df1['id1'].astype(str)\n",
+    "\n",
     "df2 = pd.read_csv(os.path.join(source_dir, set2), encoding = \"latin1\")\n",
+    "df2['id2'] = df2['id2'].astype(str)\n",
+    "\n",
     "df_pos = pd.read_csv(os.path.join(source_dir, matches), encoding = \"latin1\")\n",
+    "df_pos['id1'] = df_pos['id1'].astype(str)\n",
+    "df_pos['id2'] = df_pos['id2'].astype(str)\n",
     "\n",
     "# calculate number of matches available and...\n",
     "# number of non-matches that need to be sampled\n",
@@ -360,6 +450,8 @@
     "# extract id columns from respective datasets\n",
     "id1 = df1['id1']\n",
     "id2 = df2['id2']\n",
+    "\n",
+    "df_pos\n",
     "\n",
     "# create a mapping from id1 to a list of matches in id2.\n",
     "# when creating non-matches, we can consult dictmap to ensure non-matches...\n",
@@ -459,59 +551,48 @@
     "    print('Validation set contains {} instances'.format(len(df_val_y)))\n",
     "    print('Test set contains {} instances'.format(len(df_test_y)))\n",
     "    \n",
-    "if not os.path.isdir(destination_path):\n",
-    "    os.mkdir(destination_path)\n",
-    "    if verbose:\n",
-    "        print('Creating destination directory.')\n",
+    "# if not os.path.isdir(destination_path):\n",
+    "#     os.mkdir(destination_path)\n",
+    "#     if verbose:\n",
+    "#         print('Creating destination directory.')\n",
     "        \n",
-    "# convert 'y' Series to dataframes to avoid header import mismatches\n",
-    "df_train_y = pd.DataFrame(df_train_y)\n",
-    "df_val_y = pd.DataFrame(df_val_y)\n",
-    "df_test_y = pd.DataFrame(df_test_y)"
+    "# # convert 'y' Series to dataframes to avoid header import mismatches\n",
+    "# df_train_y = pd.DataFrame(df_train_y)\n",
+    "# df_val_y = pd.DataFrame(df_val_y)\n",
+    "# df_test_y = pd.DataFrame(df_test_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 106,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-03T23:15:10.872997Z",
-     "start_time": "2018-03-03T23:15:10.233099Z"
+     "end_time": "2018-04-12T21:37:34.378296Z",
+     "start_time": "2018-04-12T21:37:33.307304Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1300 matched pairs detected. Creating 11700 non-matched pairs.\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'defaultdict' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-7c100321d9dc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;31m# when creating non-matches, we can consult dictmap to ensure non-matches...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;31m# are not accidentally constructed from matched pairs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m \u001b[0mpos_map\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdefaultdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdf_pos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m     \u001b[0mid1_val\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'id1'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'defaultdict' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# save newly split dataframes in specified destination\n",
-    "df_train_1.to_csv(os.path.join(destination_path, 'train_1.csv'), index=False)\n",
-    "df_train_2.to_csv(os.path.join(destination_path, 'train_2.csv'), index=False)\n",
-    "df_train_y.to_csv(os.path.join(destination_path, 'train_y.csv'), index=False)\n",
+    "import pickle as pkl\n",
     "\n",
-    "df_val_1.to_csv(os.path.join(destination_path, 'val_1.csv'), index=False)\n",
-    "df_val_2.to_csv(os.path.join(destination_path, 'val_2.csv'), index=False)\n",
-    "df_val_y.to_csv(os.path.join(destination_path, 'val_y.csv'), index=False)\n",
+    "df_converted = pd.read_csv('../data/converted/amazon-walmart-reduced/set1.csv')\n",
+    "df_raw = pd.read_csv('../data/raw/amazon-walmart/set1.csv')\n",
     "\n",
-    "df_test_1.to_csv(os.path.join(destination_path, 'test_1.csv'), index=False)\n",
-    "df_test_2.to_csv(os.path.join(destination_path, 'test_2.csv'), index=False)\n",
-    "df_test_y.to_csv(os.path.join(destination_path, 'test_y.csv'), index=False)"
+    "with open('../data/converted/amazon-walmart-reduced/glove-300.map', 'rb') as f:\n",
+    "    map = pkl.load(f)\n",
+    "\n",
+    "df_converted.brand.isnull().sum()"
    ]
   },
   {
